# postsync

./: .env.example  .gitignore  Dockerfile  README.md  VIRTUAL_ENV_SETUP.md  activate.sh  dashboard.html  docker-compose.override.yml  docker-compose.yml  index.html  nginx.conf  postsync_prd.md  postsync_readme.md  pyproject.toml  requirements-core.txt  requirements-minimal.txt  requirements.txt  start_server.sh  test_login_credentials.py
.github/workflows/: ci.yml  release.yml  security.yml
css/: dashboard.css
frontend/: auth.html  dashboard.html  debug.html  forgot-password.html  index.html  terms.html
frontend/auth/linkedin/: callback.html
frontend/auth/twitter/: callback.html
frontend/css/: dashboard.css  styles.css
frontend/js/: app.js  dashboard.js
js/: app.js  dashboard.js
scripts/: deploy.sh  setup.sh
src/: __init__.py  main.py
src/ai/: __init__.py  content_optimizer.py  gemini.py  prompt_templates.py
src/api/: __init__.py  analytics.py  auth.py  content.py  users.py
src/config/: __init__.py  database.py  settings.py
src/integrations/: __init__.py  firestore.py  linkedin.py  reddit.py  twitter.py
src/models/: __init__.py  analytics.py  content.py  user.py
src/models/schemas/: __init__.py  auth.py  common.py
src/services/: __init__.py  analytics.py  auth.py  content_discovery.py  content_generation.py  publishing.py  scheduler.py  user.py
src/utils/: __init__.py  auth.py  error_handling.py  logger.py  monitoring.py
tests/: __init__.py  conftest.py
tests/test_ai/: test_gemini.py
tests/test_api/: test_auth.py  test_content.py
tests/test_integrations/: test_reddit.py
tests/test_services/: __init__.py  test_content_discovery.py  test_content_generation.py  test_publishing.py
